--- a/app/assets/stylesheets/dashboard.sass
+++ b/app/assets/stylesheets/dashboard.sass
@@ -1,5 +1,15 @@
 @import "variable"
 
+body
+  @media (max-width: 560px)
+    &::-webkit-scrollbar
+      width: 3px
+    &::-webkit-scrollbar-track
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+    &::-webkit-scrollbar-thumb
+      background-color: darkgrey
+      outline: 1px solid slategrey
+
 ._dashboard
   display: flex
   min-height: 100vh
@@ -119,6 +129,8 @@
       background: linear-gradient(to top, #F7BB97, #DD5E89)
     .__content_padding
       padding: 3% 4% 5%
+      @media (max-width: 560px)
+        padding: 9px 7px 0px !important
   .__content_footer
     position: fixed
     bottom: 0
